--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,97 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:background="@color/black"
+    android:background="@drawable/bk"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <EditText
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/choose_contact_button"
+            android:id="@+id/retrieve"
+            android:onClick="retrieve"
+            android:background="@drawable/buttonshape"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="#5d6153"
+            android:padding="10dip"
+            android:layout_gravity="start"
+            android:typeface="serif"
+            android:drawableBottom="@drawable/contact"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/contactName"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical|end"
+            android:textColor="#FFF"
+            android:layout_marginLeft="20dp" />
+
+    </LinearLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/message"
-        android:layout_marginTop="48dp"
         android:hint="@string/enter_message"
         android:textColorHint="#FFF"
         android:textCursorDrawable="@null"
-        android:layout_below="@+id/contactName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
-        android:textColor="#FFF"/>
+        android:textColor="#FFF"
+        android:padding="10dp"
+        android:inputType="textCapSentences|textMultiLine"
+        android:background="@drawable/edit_text_style"
+        android:layout_marginTop="20dp"
+        android:maxLength="100"
+        android:height="100dp" />
 
-    <Button
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+
+        <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save_button"
         android:id="@+id/save"
         android:onClick="saveData"
-        android:layout_below="@+id/message"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@drawable/buttonshape"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:textColor="#5d6153"
+        android:padding="10dip"
+        android:gravity="center"
+        android:typeface="sans"
+        android:layout_weight="1"
+        android:drawableLeft="@drawable/save2"
+        android:layout_marginRight="10dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/choose_contact_button"
-        android:id="@+id/retrieve"
-        android:onClick="retrieve"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete_button"
+            android:id="@+id/delMsg"
+            android:onClick="delMsg"
+            android:background="@drawable/buttonshape"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="#5d6153"
+            android:padding="10dip"
+            android:gravity="center"
+            android:typeface="sans"
+            android:drawableLeft="@drawable/del"
+            android:layout_weight="1"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/contactName"
-        android:textSize="20sp"
-        android:layout_alignBottom="@+id/retrieve"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/retrieve"
-        android:gravity="center|left"
-        android:textColor="#FFF"/>
+    </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/delete_button"
-        android:id="@+id/delMsg"
-        android:onClick="delMsg"
-        android:layout_below="@+id/save"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-</RelativeLayout>
+</LinearLayout>
