--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/bk"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:paddingBottom="@dimen/activity_vertical_margin" >
+
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context=".MainActivity"
+    android:focusableInTouchMode="true"
+
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -28,12 +37,13 @@
             android:drawableBottom="@drawable/contact"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/contactName"
             android:textSize="20sp"
-            android:layout_gravity="center_vertical|end"
+            android:layout_gravity="center_vertical"
             android:textColor="#FFF"
+            android:gravity="center"
             android:layout_marginLeft="20dp" />
 
     </LinearLayout>
@@ -51,7 +61,8 @@
         android:background="@drawable/edit_text_style"
         android:layout_marginTop="20dp"
         android:maxLength="100"
-        android:height="100dp" />
+        android:height="150dp"
+        android:gravity="top"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -95,3 +106,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
