--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,12 +51,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:animateLayoutChanges="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:animateLayoutChanges="true">
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -84,7 +86,7 @@
             android:orientation="horizontal"
             android:layout_marginTop="20dp"
             android:id="@+id/layout1"
-            android:animateLayoutChanges="false">
+            android:animateLayoutChanges="true">
 
             <Spinner
                 android:layout_width="wrap_content"
@@ -123,17 +125,7 @@
 
             </ViewSwitcher>
 
-
          </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp"
-        android:animateLayoutChanges="true">
 
         <EditText
             android:layout_width="match_parent"
@@ -146,6 +138,7 @@
             android:padding="10dp"
             android:inputType="textCapSentences|textMultiLine"
             android:background="@drawable/edit_text_style"
+            android:layout_marginTop="20dp"
             android:maxLength="100"
             android:height="100dp"
             android:gravity="top"/>
@@ -154,7 +147,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:animateLayoutChanges="true">
 
             <Button
             android:layout_width="wrap_content"
@@ -195,4 +189,5 @@
     </LinearLayout>
 
 </LinearLayout>
+
 </ScrollView>
